# RADit_Reliable-Agentic-Determinism-Intelligence-Transformation

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  PROGRESS.md  agents.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  nginx.ssl.conf  pnpm-lock.yaml
.githooks/: pre-commit
.github/workflows/: integration-nightly.yml  validate-codebase-map.yml
apps/server/: .gitkeep  Dockerfile  README.md  pyproject.toml
apps/server/src/daw_server/: __init__.py  logging_config.py  main.py
apps/server/src/daw_server/api/: __init__.py  routes.py  schemas.py  websocket.py
apps/server/src/daw_server/auth/: __init__.py  clerk.py  dependencies.py  middleware.py
apps/server/src/daw_server/config/: __init__.py  redis.py
apps/server/src/daw_server/db/: __init__.py  neo4j.py
apps/server/src/daw_server/middleware/: __init__.py  request_id.py
apps/server/src/daw_server/repositories/: __init__.py  workflow.py
apps/server/src/daw_server/workers/: __init__.py  celery_app.py  tasks.py
apps/server/tests/: __init__.py  conftest.py
apps/server/tests/api/: test_auth.py  test_interview_routes.py  test_routes.py  test_websocket.py
apps/server/tests/workers/: __init__.py  test_celery.py
apps/web/: .env.local.example  .gitkeep  Dockerfile  next.config.ts  package.json  playwright.config.ts  tsconfig.tsbuildinfo
docs/: DEPLOYMENT_READINESS.md  codebase_map.json  codebase_map.schema.json
docs/continuation-packages/: continuation_20251230_152611.md
docs/planning/: agent_execution_plan.md  gap_analysis_report.md  implementation_readiness_check.md  mvp_readiness_assessment.md  readiness_review.md  self_evolution_analysis.md  task_reprioritization_analysis.md  tasks.json  tdd_workflow.md  (+1 more)
eval/: README.md
eval_results/: .gitkeep
scripts/: deploy.sh  docker-down.sh  docker-up.sh  gather_codebase_map.py  setup-hooks.sh
(+121 files in other folders)
