[tool.poetry]
name = "daw-server"
version = "0.1.0"
description = "DAW Server - FastAPI server for Deterministic Agentic Workbench"
authors = ["RADit Team <team@radit.dev>"]
readme = "README.md"
packages = [{ include = "daw_server", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
celery = "^5.6.1"
redis = "^7.1.0"
pydantic = "^2.12.5"
httpx = "^0.28.1"
pyjwt = "^2.10.1"
cryptography = "^46.0.3"
slowapi = "^0.1.9"
neo4j = "^6.0.3"
daw-agents = {path = "../../packages/daw-agents", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
mypy = "^1.19.1"
ruff = "^0.14.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers"
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["celery.*", "kombu.*", "neo4j.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = [
    "E501",  # Line too long
    "B008",  # Allow function calls in defaults (required for FastAPI Depends pattern)
    "UP017",  # datetime.UTC requires Python 3.11+
    "B905",  # strict= in zip() requires Python 3.10+
]
